# HarmoniLAN

./: CMakeLists.txt  README.md
docs/: HarmoniLAN_Arquitectura.md  HarmoniLAN_Arquitectura.tex
gui/HarmoniLAN_GUI/: HarmoniLAN_GUI.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: rtp.h
src/: discover_client.cpp  discovery.cpp  main.cpp  receiver.cpp  sender.cpp
